# TODO-App

./: LICENSE  README.md  TODO-App  tasks.db
src/: CMakeLists.txt  CSVBackup.cpp  CSVBackup.h  DatabaseManager.cpp  DatabaseManager.h  Task.cpp  Task.h  TaskManager.cpp  TaskManager.h  ToDoListApp  UIManager.cpp  UIManager.h  Validator.cpp  Validator.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tasks.db  tasks.txt  todo_app
